--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,7 @@ platforms/android/CordovaLib/ant-gen
 platforms/android/CordovaLib/bin
 platforms/android/CordovaLib/gen
 platforms/android/CordovaLib/local.properties
-
+platforms/android/.gradle/2.14.1/taskArtifacts
 # wp8
 platforms/wp8/bin
 platforms/wp8/obj
