--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,7 @@ platforms/android/CordovaLib/local.properties
 platforms/android/.gradle/2.14.1/taskArtifacts
 platforms/android/gradle
 platforms/android/gradlew
+platforms/android/.gradle
 # wp8
 platforms/wp8/bin
 platforms/wp8/obj
